Loads more stuff. Commands, lists and rudimentary help.

--- a/readme
+++ b/readme
@@ -1,5 +1,7 @@
-﻿# Ideas/Commands
+﻿# Implemented
 *id
+
+# Ideas/Commands
 *botsnack
 *insult/compliment + monkey island retort
 *slap
@@ -38,4 +40,5 @@
 *wiki
 *episode
     tv show
+*down? http-link
 
