--- a/readme
+++ b/readme
@@ -14,13 +14,14 @@
 *hello
 *status
     I'm a teapot
+*admin
+    force recheck when nick quits and joins
+    follows nick change, check admin auth nick - not the normal one
+    admin authed nicks set in config
 
 # Ideas/Commands
 *admin
     add checking for admin commands
-    add end of whois command queue for triggering
-    add checks for when nick quits, need to recheck for auth
-    add nicknames for admin (who should be authed)
     auto-op admins if we can
 *plugins
     commands for loading/unloading/reloading plugins!
@@ -63,4 +64,6 @@
 *episode
     tv show
 *down? http-link
+*gomtv live -> vlc link
+    juse use the python script for that one
 
