--- a/readme
+++ b/readme
@@ -27,6 +27,7 @@
 *Refactor hardcoded cmd lists
 *Descriptive readme with command line options and stuff?
 *Change logging level dynamically
+*Need major cleanup at authing checking facility! Hacky random WHOIS messages without checking for duplicate sending. Deadlock not interely solved, it might reappear again outside of plugin cmd parsing (ie trying to bind a JOIN event and checking if the nick is auth and we haven't gotten any info on him). It should send an WHOIS on everyone it sees but it's nott fool proof. Need to clean up and set into nicer functions, might need to freeze and unfreeze on 318 and on specific nick too! Also add to check if nick is online.
 
 # Bugs
 *^C hangs on stdin getline, quits after enter (only sometimes?)
@@ -35,7 +36,8 @@
     It's strange because threaded cmd_workers can use Plugin functions just fine
 *.is_auth? <botnick> doesn't work
 *Plugins don't really reload, the classes are just the same. But the files are being reparsed..!
-*Plugins deadlock if is_admin/is_auth is called and we doesn't have an entry yet. Then that thread will idle, but with the semaphore locked down. Later in the main loop when we're getting new messages we're trying to send them to plugins and then trying to lock down once again. Here we will freeze and cause a deadlock!
+*Plugins deadlock if is_admin/is_auth is called and we doesn't have an entry yet. Then that thread will idle, but with the semaphore locked down. Later in the main loop when we're getting new messages we're trying to send them to plugins and then trying to lock down once again. Here we will freeze and cause a deadlock! Not fixed even if it works sometimes!
+    -- It's sort of fixed, see Todo
 
 # Implemented
 *admin
